--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "next-i18n-router": "^5.5.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "i18nexus-cli": "^3.5.0",
