--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.12",
     "next-i18n-router": "^5.5.1",
+    "pocketbase": "^0.21.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
