--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^15.0.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-share": "^5.1.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
