--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "i18nexus pull && next dev",
     "build": "i18nexus pull && next build",
     "start": "i18nexus pull && next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.12",
     "next-i18n-router": "^5.5.1",
+    "next-sitemap": "^4.2.3",
     "pocketbase": "^0.21.5",
     "react": "^18",
     "react-dom": "^18",
