--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-date-pickers": "^8.3.1",
+    "cally": "^0.8.0",
+    "dayjs": "^1.11.13",
     "i18next": "^23.15.1",
     "i18next-resources-to-backend": "^1.2.1",
     "next": "14.2.12",
